[package]
name = "server"
version = "0.1.0"
authors = ["fishedee <306766045@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
actix-web = "1.0"
serde = "1.0"
serde_json = "1.0"
listenfd = "0.3"
env_logger = "0.6"
futures = "0.1"
mysql_async = "0.20.0"
actix-session = "0.2.0"